[gd_scene load_steps=4 format=3 uid="uid://bue11nombl2g7"]

[ext_resource type="Script" path="res://scene/player/menu/pauseMenu.gd" id="1_b5uvv"]
[ext_resource type="StyleBox" uid="uid://dl1e0qtgp13cj" path="res://style/style_box_basic.tres" id="1_flf1f"]
[ext_resource type="PackedScene" uid="uid://bepxjqhida0n8" path="res://scene/player/ui/roadButton.tscn" id="2_7fdu8"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_b5uvv")

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_flf1f")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = 33.0
offset_right = -36.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="continue" parent="Panel/VBoxContainer" instance=ExtResource("2_7fdu8")]
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="abandon" parent="Panel/VBoxContainer" instance=ExtResource("2_7fdu8")]
layout_mode = 2
size_flags_vertical = 3
text = "Abandon"

[node name="settings" parent="Panel/VBoxContainer" instance=ExtResource("2_7fdu8")]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="quit" parent="Panel/VBoxContainer" instance=ExtResource("2_7fdu8")]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/abandon" to="." method="_on_abandon_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
